--- a/phone/index.html
+++ b/phone/index.html
@@ -5,10 +5,6 @@
     <title>ss</title>
     <meta charset="utf-8">
     <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <link rel="stylesheet" href="css/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="css/ui-box.css">
-    <link rel="stylesheet" href="css/ui-base.css">
-    <link rel="stylesheet" href="css/ui-color.css">
     <link href="lib/mui/css/mui.min.css" rel="stylesheet" />
 </head>
 
@@ -24,7 +20,7 @@
     <script>
         appcan.ready(function() {
             window.onorientationchange = window.onresize = function() {
-                appcan.frame.resize("content", 0, titHeight);
+                //appcan.frame.resize("content", 0, titHeight);
             }
         });
     </script>
